--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.5",
     "es6-promise": "^4.0.5",
     "jquery": "^3.1.1",
     "vue": "^2.1.3"
@@ -15,6 +15,10 @@
     "css-loader": "^0.26.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^3.13.0",
+    "octicons": "^5.0.1",
+    "sass-loader": "^4.0.2",
     "ts-loader": "^1.2.2",
     "typescript": "^2.0.10",
     "vue-loader": "^10.0.2",
