--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/jquery": "^2.0.34",
     "css-loader": "^0.26.0",
     "del": "^2.2.2",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
+    "gulp-replace": "^0.5.4",
     "mkdirp": "^0.5.1",
     "node-sass": "^3.13.0",
     "octicons": "^5.0.1",
