--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     },
     "include": [
         "src/**/*.ts",
-        "node_modules/**/*.d.ts",
+        //"node_modules/**/*.d.ts",
         "node_modules/@types/**/*.ts",
         "typings/**/*.d.ts"
     ]
