--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.32",
+    "@types/jasmine": "^2.5.38",
     "@types/jquery": "^2.0.34",
     "css-loader": "^0.26.0",
     "del": "^2.2.2",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-replace": "^0.5.4",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-typescript": "^2.1.7",
     "mkdirp": "^0.5.1",
     "node-sass": "^3.13.0",
     "octicons": "^5.0.1",
