--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "del": "^2.2.2",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.4",
     "gulp-replace": "^0.5.4",
     "jasmine-core": "^2.5.2",
+    "jshint": "^2.9.4",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
@@ -24,8 +26,8 @@
     "sass-loader": "^4.0.2",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.3",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
