--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.27.3",
     "del": "^2.2.2",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
@@ -29,8 +31,8 @@
     "sass-loader": "^4.0.2",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.3",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.3"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
