--- a/package.json
+++ b/package.json
@@ -10,27 +10,34 @@
     "vue": "^2.1.3"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
+    "babelify": "^7.3.0",
+    "browserify": "^14.1.0",
     "css-loader": "^0.27.3",
     "del": "^2.2.2",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.4",
+    "gulp-mocha": "^4.1.0",
     "gulp-replace": "^0.5.4",
     "jasmine-core": "^2.5.2",
     "jshint": "^2.9.4",
     "karma": "^1.4.1",
+    "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "mkdirp": "^0.5.1",
+    "mocha": "^3.2.0",
     "node-sass": "^3.13.0",
     "octicons": "^5.0.1",
     "sass-loader": "^4.0.2",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.3",
+    "watchify": "^3.9.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
